<resources>
    <string name="app_name">GoParty</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">GoParty</string>
    <!-- common -->
    <string name="save">保存</string>
    <string name="loading">加载中</string>
    <string name="search">搜索</string>
    <string name="placeholder1">placeholder1</string>
    <string name="placeholder2">placeholder2</string>
    <string name="confirm">确定</string>
    <string name="edit">编辑</string>
    <string name="chat">聊天</string>
    <string name="time">时间</string>
    <string name="empty"></string>
    <string name="status_operation_failure">操作失败</string>
    <string name="status_operation_success">操作成功</string>
    <string name="no_data">没有数据</string>
    <string name="picture">图片</string>
    <string name="cancel">取消</string>
    <!-- navigation menu -->
	<string name="home">首页</string>
	<string name="contact">联系人</string>
	<string name="event">活动</string>
	<string name="setting">设置</string>
	
	<string name="go_back">返回</string>
	<string name="add">添加</string>
	<!-- login -->
	<string name="wechat_number">微信号</string>
	<string name="qq_number">QQ号码</string>
	<string name="mobile_number">手机号</string>
	<string name="message_code_btn">获取验证码</string>
	<string name="message_code">输入验证码</string>
	<string name="login">登录</string>
	<!-- event -->
	<string name="my_events">我的活动</string>
	<string name="event_name">活动名称</string>
	<string name="address">地址</string>
	<string name="start">开始</string>
	<string name="end">结束</string>
	<string name="start_datetime">开始时间</string>
	<string name="end_datetime">结束时间</string>
	<string name="event_time">活动时间</string>
	<string name="event_type">活动类型</string>
	<string name="details">详情</string>
	<string name="event_invite">活动邀请</string>
	<string name="received_event_invit">收到的活动邀请</string>
	<string name="selected">选中</string>
	<string name="day_of_week">星期</string>
	<string name="share">分享</string>
	<string name="comment">评论</string>
	<!-- contact -->
	<string name="event_contact">联系人</string>
	<string name="new_contact">新的朋友</string>
	<string name="friend">好友</string>
	<string name="group">分组</string>
	<string name="discussion">讨论组</string>
	<string name="add_contact">加朋友</string>
	<string name="add_contact_by_search">探索号码添加朋友</string>
	<string name="add_contact_by_photo_num">添加手机联系人</string>
	<string name="wechat_qq_mobile">微信号/QQ号/手机号</string>
	<string name="contact_face">头像</string>
	<string name="contact_add_as_friend">添加为好友</string>
	<string name="contact_delete_from_friend">删除好友</string>
	<string name="status_add_sucess">添加成功</string>
	<string name="status_add_failure">添加失败</string>
	<string name="status_del_sucess">删除成功</string>
	<string name="status_del_failure">删除失败</string>
	<string name="cant_add_yourself_as_friend">不能添加自己为好友</string>
	<string name="add_group">添加分组</string>
	<string name="del_group">删除分组</string>
	<string name="reply_message">回复消息</string>
	<string name="reply_invite">回复邀请</string>
	<!-- chat -->
	<string name="send">发送</string>
	<!-- Error -->
	<string name="activity_intent_commu_not_ok">通讯未成功</string>
	<string name="camera">拍照</string>
	<string name="select_from_gallery">从手机相册选择</string>
</resources>
