<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/goparty_top_bg"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <Button
        android:id="@+id/btn_common_header_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/goparty_v2_btn_back_bg"
        android:contentDescription="@string/go_back" />

    <TextView
        android:id="@+id/btn_common_header_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/details"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btn_common_header_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/goparty_v2_btn_submit_bg"
        android:contentDescription="@string/confirm" />

</LinearLayout>