<?xml version="1.0" encoding="utf-8"?>
 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >
	<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/goparty_top_bg"
        android:paddingLeft="5dp"
        android:paddingRight="15dp" >
	    <Button
		    android:id="@+id/btn_nav_event_create"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:background="@drawable/goparty_icon_add"
		    android:contentDescription="@string/add" />
	    <TextView  
        		android:layout_width="0dp"  
        		android:layout_height="wrap_content"  
        		android:layout_weight="1" />  
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textSize="35sp"
		        android:text="@string/event" />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/login_linearlayout_btns"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="vertical" 
	    android:background="#eee">
	    <!-- Events Invitation -->
	    <Button
		    android:id="@+id/btn_event_invite"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/received_event_invit"
		    />
	</LinearLayout>
	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/my_events" />
	<ListView 
		android:id="@+id/myEventsListView"
		android:layout_height="fill_parent"
		android:layout_width="match_parent"
		android:background="#eee">
		</ListView>
</LinearLayout>