<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#eee">

    <ImageView
        android:id="@+id/eventImage111"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:padding="5dp"
        android:src="@drawable/goparty_face_default" 
        android:contentDescription="@string/contact_face"/>

    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingTop="5dp">
	    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="@color/blue"
		        android:text="@string/event" />
	    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textSize="15sp"
		        android:textColor="@color/black"
		        android:text="what a wonderful event!" />
	    
	    <!-- images iterator placeholder  -->
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textSize="15sp"
		        android:text="@string/time" />
		    <TextView
		        android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"/>
		    <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/goparty_comment_icon" 
                    android:contentDescription="@string/comment"/>
	    </LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textSize="15sp"
		        android:text="ABC: yeah..." />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>