<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbarStyle="outsideOverlay" >

     <LinearLayout
        android:id="@+id/login_linearlayout_btns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#eee"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical" >

        <!-- event name -->
        <TextView
            android:id="@+id/event_details_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/editbox_normal"
            android:gravity="center_vertical"
            android:ems="10"
            android:textColor="#000"
            android:hint="@string/event_name"
            android:textSize="15sp" />
        <!-- seperator -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#ffcccccc" />
        <!-- event address -->
            <TextView
                android:id="@+id/event_details_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/editbox_normal"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:textColor="#000"
                android:textSize="15sp"/>
            <!-- type -->
            <TextView
                android:id="@+id/event_details_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
            android:background="@drawable/editbox_normal"
                android:gravity="center_vertical"
                android:hint="@string/event_type"
                android:singleLine="true"
                android:textColor="@color/gray"
                android:textSize="15sp"/>
            <!-- contact -->
        <LinearLayout
            android:id="@+id/layout_event_create_contact"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/editbox_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:drawableLeft="@drawable/goparty_event_contact"
                android:text="@string/event_contact"
                android:textColor="@color/gray"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/contact_count_textview"
                android:layout_width="30dp"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/gray"
                android:background="@drawable/setbar_bg"
                android:visibility="invisible" />
                        
            <TextView
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="#ffcccccc" />

            <ImageView
                android:id="@+id/event_add_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp"
                android:contentDescription="@string/event_contact"
                android:src="@drawable/goparty_plus_small" />
        </LinearLayout>
        <!-- start and end -->
       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/editbox_normal"
            android:gravity="center_vertical"
            android:orientation="vertical" >
		    	<TextView
		    	    android:id="@+id/event_details_starttime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:drawableLeft="@drawable/goparty_event_start"
	                android:text="@string/start"
	                android:textSize="15sp"
	                android:textColor="@color/green"/>
		    	<TextView
		    	    android:id="@+id/event_details_endtime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="10dp"
	                android:drawableLeft="@drawable/goparty_event_end"
	                android:text="@string/end"
	                android:textSize="15sp"
	                android:textColor="@color/orange"/>
        </LinearLayout>
        
        
        <!-- details -->
            <TextView
                android:id="@+id/event_details_details"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:background="@drawable/editbox_normal"
                android:ems="10"
                android:hint="@string/details"
                android:textColor="#000"
                android:textSize="15sp" />
        <!-- seperator -->
        
    	<TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#ffcccccc" />

		<!-- button -->
		<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
	        <Button
	            android:id="@+id/btn_event_add_submit"
	            android:layout_width="90dp"
	            android:layout_height="40dp"
	            android:layout_marginTop="10dp"
            	android:layout_marginBottom="10dp"
            	android:layout_marginRight="10dp"
	            android:background="@drawable/goparty_btn_bg_bule"
	            android:text="@string/confirm"
	            android:textColor="#ffffff"
	            android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
	</ScrollView>