<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:descendantFocusability="afterDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/goparty_top_bg"
        android:paddingLeft="5dp"
        android:paddingRight="10dp" >

        <Button
            android:id="@+id/btn_nav_event_type_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/goparty_icon_return"
            android:contentDescription="@string/go_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/event_type"
            android:textSize="35sp" />
    </LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
        android:layout_weight="1"
	    android:background="#eee"
	    android:padding="10dp"
	    android:orientation="vertical" >    
		<GridView 
		    android:id="@+id/gridview_event_types"  
		    android:layout_width="fill_parent"   
		    android:layout_height="fill_parent"  
		    android:numColumns="auto_fit"  
		    android:verticalSpacing="10dp"  
		    android:horizontalSpacing="10dp"  
		    android:columnWidth="90dp"  
		    android:stretchMode="columnWidth"  
		    android:gravity="center"/>
	</LinearLayout>
	
	<!-- seperator -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffcccccc" />

    <!-- button -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right" >

        <Button
            android:id="@+id/btn_event_type_submit"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/goparty_btn_bg_bule"
            android:text="@string/confirm"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
